k8s/actuator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actuator
  labels:
    app: actuator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: actuator
  template:
    metadata:
      labels:
        app: actuator
    spec:
      containers:
        - name: actuator
          image: olihock/actuator:1.0.1
          ports:
            - containerPort: 7003

---

kind: Service
apiVersion: v1
metadata:
  name: actuator
spec:
  type: LoadBalancer
  selector:
    app: actuator
  ports:
    - port: 7003 
      targetPort: 7003
