k8s/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: integration
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: integration
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actuator
                port:
                  number: 7003
    - host: ithoc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actuator
                port:
                  number: 7003
    - host: integ.dynv6.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actuator
                port:
                  number: 7003
